@@ -1,3 +1,10 @@
+2012-11-11  David S. Miller  <davem@davemloft.net>
+
+	* sysdeps/unix/sysv/linux/sparc/sparc64/get_clockfreq.c: Include
+	inttypes.h
+	(__get_clockfreq_via_proc_openprom): Use __open, __read, and
+	__close rather than their public counterparts.
+
 2012-11-10  Joseph Myers  <joseph@codesourcery.com>
 
 	* conform/data/semaphore.h-data [XPG3 || XPG4]: Disable whole
